# cuda-fluid-sim

./: .gitignore  CMakeLists.txt  Docs.md  Measurements.md  Plan.md  README.md  Worklog.md  todo.md
measurements/: Measurements.md
src/: fluid.cu  fluid.h  helper.h  interop.cu  interop.h  kernel.cu  kernel.h  main.cpp  timing.h
src/kernels/: advection.cu  advection.h  fluid.cu  fluid.h  plasmaKernel.cu  plasmaKernel.h  projection.cu  projection.h  render.cu  render.h
src/kernels/_testing/: plasmaKernel.cu  plasmaKernel.h
src/kernels/jacobi/: rbgs.cu  rbgs.h  simple.cu  simple.h  slab.cu  slab.h  tiling.cu  tiling.h
src/kernels/pressure/: rbgs.cu  rbgs.h  simple.cu  simple.h  slab.cu  slab.h  tiling.cu  tiling.h
